tests/ui/impl-trait/call_method_on_inherent_impl_ref-err.next.stderr
error[E0599]: no method named `my_debug` found for type `_` in the current scope
  --> $DIR/call_method_on_inherent_impl_ref-err.rs:18:11
   |
LL |     fn my_debug(&self);
   |        -------- the method is available for `&_` here
...
LL |         x.my_debug();
   |           ^^^^^^^^ method not found in `_`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `MyDebug` defines an item `my_debug`, perhaps you need to implement it
  --> $DIR/call_method_on_inherent_impl_ref-err.rs:4:1
   |
LL | trait MyDebug {
   | ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
